sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: ';' expected but ',' found.
        echange(i,i+1),
                      ^