sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var inversion = false
  var debut = 0 ; 
  var fin = getNombreValeurs() - 2;
  do {
    for (i<- debut to fin) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1),
    fin = fin - 1;
    inversion = true;
    for (i<- fin to debut by -1) {
      if (plusPetit(i,i+1)) {
        echange(i,i+1);
    debut = debut + 1;
    inversion = true;
      }
    }
      }
    }
  } while (!inversion)
}